<resources>
    <string name="todo_list">Todo List</string>
    <string name="high">High</string>
    <string name="normal">Normal</string>
    <string name="low">Low</string>
    <string name="quit_app">Quit the application</string>
    <string name="stats">Statistics</string>
    <string name="date">Date</string>
    <string name="task_done">Done</string>
    <string name="task_todo">To-do</string>

    <string name="name_task">Name of the task</string>
    <string name="desc_task">Description of the task</string>
    <string name="priority_task">Priority of the task</string>
    <string name="add_task">Add a Task</string>
    <string name="placeholder_shopping">Ex: Do groceries</string>
    <string name="placeholder_desc">Ex: buy milk, chocolate, etc…</string>

    <string name="date_task">Date of the task</string>
    <string name="fieldName">Name</string>
    <string name="fieldDesc">Description</string>
    <string name="fieldPriority">Priority</string>
    <string name="title_detail">Task</string>
    <string name="delete_task">Delete task</string>
    <string name="modify_task">Modify task</string>
    <string name="confirm_message">Are you sure you want to delete this task?</string>
    <string name="confirm">Yes</string>
    <string name="cancel">No</string>
    <string name="task_added">Task added successfully</string>
    <string name="task_cancel">Task canceled</string>
    <string name="task_incomplete">Please enter a task name</string>

    <string name="task_deleted">Successfully deleted</string>
    <string name="task_delete_cancel">Deletion canceled</string>

    <string name="groceriesHintName">Groceries</string>
    <string name="groceriesHintDesc">Buy tomatoes, peppers and milk</string>

</resources>