<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/titleAjout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/add_task"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/labelNameTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textNomTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:fontFamily="@font/asap"
        android:hint="@string/placeholder_shopping"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/labelDescTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelNameTask"
        android:autofillHints="@string/placeholder_shopping" />

    <EditText
        android:id="@+id/textDescTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:fontFamily="@font/asap"
        android:hint="@string/placeholder_desc"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/textPriorityTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelDescTask"
        android:autofillHints="@string/placeholder_desc" />

    <TextView
        android:id="@+id/labelNameTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="300dp"
        android:fontFamily="@font/asap_medium"
        android:text="@string/name_task"
        android:textColor="#f85f6a"
        app:layout_constraintBottom_toTopOf="@+id/textNomTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleAjout" />

    <TextView
        android:id="@+id/labelDescTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="298dp"
        android:fontFamily="@font/asap_medium"
        android:text="@string/desc_task"
        android:textColor="#f85f6a"
        app:layout_constraintBottom_toTopOf="@+id/textDescTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNomTask" />

    <TextView
        android:id="@+id/textPriorityTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="240dp"
        android:fontFamily="@font/asap_medium"
        android:text="@string/priority_task"
        android:textColor="#F85F6A"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupPrio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDescTask" />

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo_list"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toTopOf="@+id/titleAjout"
        app:layout_constraintEnd_toStartOf="@+id/titleAjout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupPrio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="89dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPriorityTask">

        <RadioButton
            android:id="@+id/radio_high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/asap"
            android:text="@string/high" />

        <RadioButton
            android:id="@+id/radio_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:checked="true"
            android:fontFamily="@font/asap"
            android:text="@string/normal" />

        <RadioButton
            android:id="@+id/radio_low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/asap"
            android:text="@string/low" />
    </RadioGroup>

    <CalendarView
        android:id="@+id/calendar"
        android:layout_width="305dp"
        android:layout_height="308dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupPrio" />

    <Button
        android:id="@+id/btn_addTask"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_custom"
        android:text="@string/add_task"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendar" />


</androidx.constraintlayout.widget.ConstraintLayout>