<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatisticsActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/todo_list"
        app:layout_constraintBottom_toTopOf="@+id/titleStats"
        app:layout_constraintEnd_toStartOf="@+id/titleStats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/titleStats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:text="@string/stats"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/scrollTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollTable"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleStats">

        <TableLayout
            android:id="@+id/tableStats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:stretchColumns="0,1,2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/scrollTable"
            app:layout_constraintTop_toBottomOf="@+id/titleStats">

            <TableRow
                android:id="@+id/tableHeaderRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/table_header_border"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/tableHeaderDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/table_header_border"
                    android:padding="5dp"
                    android:text="@string/date"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tableHeaderDone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/table_header_border"
                    android:padding="5dp"
                    android:text="@string/task_done"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tableHeaderTotal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/table_header_border"
                    android:padding="5dp"
                    android:text="@string/task_todo"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="15sp" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>